[SPARK-26896] JDK 11 module adjustments for running tests
This adds a JDK11 profile, just intended for running tests.  It adds
extra runtime arguments to the test runners to get around new module
limitations.  This includes:

1) removal of jaxb from java itself (used in pmml export in mllib)

2) Some reflective access which results in failures, eg.

Unable to make field jdk.internal.ref.PhantomCleanable
jdk.internal.ref.PhantomCleanable.prev accessible: module java.base does
not "opens jdk.internal.ref" to unnamed module

3) Some reflective access which results in warnings.